K2Converter configuration, SQL